--- a/components/Accordion.html
+++ b/components/Accordion.html
@@ -91,7 +91,7 @@
 
               <!-- Menu navegacion -->
               <div class="mt-4">
-              <a href="/Proyecto final Boostrap/index.html" class="btn btn-info">Regresar</a>
+              <a href="../index.html" class="btn btn-info">Regresar</a>
               <a href="Alerts.html" class="btn btn-success">Siguiente componente</a>
               </div>
           </div>
