--- a/components/Alerts.html
+++ b/components/Alerts.html
@@ -82,7 +82,7 @@
 
               <!-- Menu navegacion -->
               <div class="mt-4">
-              <a href="/Proyecto final Boostrap/index.html" class="btn btn-info">Regresar</a>
+              <a href="../index.html" class="btn btn-info">Regresar</a>
               <a href="Notifications.html" class="btn btn-success">Siguiente componente</a>
               </div>
           </div>
