Finalizado y listo para revision

--- a/components/Button group.html
+++ b/components/Button group.html
@@ -66,8 +66,8 @@
 
               <!-- Menu navegacion -->
               <div class="mt-4">
-              <a href="/Proyecto final Boostrap/index.html" class="btn btn-info">Regresar</a>
-              <a href="informations.html" class="btn btn-success">Siguiente componente</a>
+              <a href="../index.html" class="btn btn-info">Regresar</a>
+              <a href="Closebutton.html" class="btn btn-success">Siguiente componente</a>
               </div>
           </div>
         </div>
