--- a/components/Closebutton.html
+++ b/components/Closebutton.html
@@ -33,57 +33,33 @@
   
     <div class="album py-5 bg-light">
 
-        <!-- Description -->
-
       <div class="container">
 
+        <!-- Insertar component -->
+
+
         <div class="card">
-          <h5 class="card-header">Alerts</h5>
+          <h5 class="card-header">Close button</h5>
           <div class="card-body">
-            <h5 class="card-title"></h5>
+            
             <p class="card-text">
-              Provide contextual feedback messages for typical user actions with the 
-              handful of available and flexible alert messages.
+                A generic close button for dismissing content like modals and alerts.
             </p>
             <p class="">
               <strong>
                 Example
               </strong>
-            </div>
 
-        <!-- Insertar component -->
-        
-        <div class="alert alert-primary" role="alert">
-          A simple primary alert—check it out!
-        </div>
-        <div class="alert alert-secondary" role="alert">
-          A simple secondary alert—check it out!
-        </div>
-        <div class="alert alert-success" role="alert">
-          A simple success alert—check it out!
-        </div>
-        <div class="alert alert-danger" role="alert">
-          A simple danger alert—check it out!
-        </div>
-        <div class="alert alert-warning" role="alert">
-          A simple warning alert—check it out!
-        </div>
-        <div class="alert alert-info" role="alert">
-          A simple info alert—check it out!
-        </div>
-        <div class="alert alert-light" role="alert">
-          A simple light alert—check it out!
-        </div>
-        <div class="alert alert-dark" role="alert">
-          A simple dark alert—check it out!
-        </div>
+              <!-- Ejemplo -->
 
+
+              <button type="button" class="btn-close" aria-label="Close"></button>
 
 
               <!-- Menu navegacion -->
               <div class="mt-4">
               <a href="../index.html" class="btn btn-info">Regresar</a>
-              <a href="badge.html" class="btn btn-success">Siguiente componente</a>
+              <a href="card.html" class="btn btn-success">Siguiente componente</a>
               </div>
           </div>
         </div>
