--- a/components/Notifications.html
+++ b/components/Notifications.html
@@ -69,7 +69,7 @@
 
               <!-- Menu navegacion -->
               <div class="mt-4">
-              <a href="/Proyecto final Boostrap/index.html" class="btn btn-info">Regresar</a>
+              <a href="../index.html" class="btn btn-info">Regresar</a>
               <a href="Spinners.html" class="btn btn-success">Siguiente componente</a>
               </div>
           </div>
