--- a/components/Pagination.html
+++ b/components/Pagination.html
@@ -64,16 +64,16 @@
 
 
 
+
               <!-- Menu navegacion -->
               <div class="mt-4">
-              <a href="/Proyecto final Boostrap/index.html" class="btn btn-info">Regresar</a>
-              <a href="informations.html" class="btn btn-success">Siguiente componente</a>
-              </div>
+                <a href="../index.html" class="btn btn-info">Regresar</a>
+                <a href="Buttons.html" class="btn btn-success">Siguiente componente</a>
+                </div>
+            </div>
           </div>
+        
         </div>
-      
-      </div>
-          
   </main>
   
   <footer class="text-muted py-5">
