--- a/components/Breadcrumb.html
+++ b/components/Breadcrumb.html
@@ -14,7 +14,7 @@
 
     <div class="navbar navbar-dark bg-dark shadow-sm">
       <div class="container">
-        <a href="/Proyecto final Boostrap/index.html" 
+        <a href="../index.html" 
         class="navbar-brand d-flex align-items-center">
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bootstrap-fill" viewBox="0 0 16 16">
             <path d="M6.375 7.125V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23H6.375zm0 3.762h1.898c1.184 0 1.81-.48 1.81-1.377 0-.885-.65-1.348-1.886-1.348H6.375v2.725z"/>
@@ -73,15 +73,16 @@
               </nav>
 
 
+
               <!-- Menu navegacion -->
               <div class="mt-4">
-              <a href="/Proyecto final Boostrap/index.html" class="btn btn-info">Regresar</a>
-              <a href="Alerts.html" class="btn btn-success">Siguiente componente</a>
-              </div>
+                <a href="../index.html" class="btn btn-info">Regresar</a>
+                <a href="Pagination.html" class="btn btn-success">Siguiente componente</a>
+                </div>
+            </div>
           </div>
+        
         </div>
-      
-      </div>
           
   </main>
   
